--- a/TheWorld/TheWorld.csproj
+++ b/TheWorld/TheWorld.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="config.json" />
     <None Include="wwwroot\index.html" />
   </ItemGroup>
   <ItemGroup>
