--- a/TheWorld/TheWorld.csproj
+++ b/TheWorld/TheWorld.csproj
@@ -12,11 +12,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="wwwroot\ciews" />
     <Content Include="wwwroot\css\site.css" />
     <Content Include="wwwroot\img\user1.jpg" />
     <Content Include="wwwroot\js\app-trips.js" />
+    <Content Include="wwwroot\js\simplerControls.js" />
     <Content Include="wwwroot\js\site.js" />
     <Content Include="wwwroot\js\tripsController.js" />
+    <Content Include="wwwroot\views\waitCursor.html" />
   </ItemGroup>
 
   <ItemGroup>
